src/paths/snapshots/mandala__paths__lines__line_tests__f32-2d-line-segment.snap
---
source: src/paths/lines.rs
expression: "[line_segment.eval(0.0), line_segment.eval(0.5), line_segment.eval(1.0)]"
---
[
    Vector2 {
        x: 0.0,
        y: 0.0,
    },
    Vector2 {
        x: 0.5,
        y: 0.5,
    },
    Vector2 {
        x: 1.0,
        y: 1.0,
    },
]
